<resources>
    <string name="app_name">Dallero</string>

    <string name="facebook_app_id">131116687542366</string>
    <string name="fb_login_protocol_scheme">fb131116687542366</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Lössenord</string>
    <string name="log_in">Logga In</string>
    <string name="e_mail">E-post</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">closed drawer</string>
    <string name="info_message_title">Personlig nforamtion:</string>
    <string name="daily_message_title">Inforamtion för dagen:</string>
    <string name="menu_drawer_home">Hem</string>
    <string name="drawer_menu_schedule">Schema</string>
    <string name="menu_drawer_payouts">Lön</string>
    <string name="drawer_menu_settings">Inställningar</string>
    <string name="drawer_menu_submenu_title">Komunikation</string>
    <string name="log_out">Logga ut</string>
    <string name="drawer_menu_link_facebook">Länka med facebook</string>
    <string name="logo_name">Dallero</string>
    <string name="login_forget_password"><u>Glömt lösenord?</u></string>
    <string name="available_dialog">Tillgänglig</string>
    <string name="not_available_dialog">Inte tillgänglig</string>
    <string name="save">Spara</string>
    <string name="info_title">INFO</string>
    <string name="from">Från:</string>
    <string name="drawer_personal_information">Mina Info</string>
    <string name="total_worked_hours">Total antal timmar:</string>
    <string name="notification_channel_description">weeee</string>
    <string name="brutto">(Brutto)</string>
    <string name="dayColumn">Dag</string>
    <string name="startColumn">Start</string>
    <string name="endColumn">Slut</string>
    <string name="durationColumn">Längd</string>
    <string name="netto">Netto</string>
    <string name="currency">Sek</string>
    <string name="inlogg">Inloggning</string>
    <string name="splash_screen_text">Ha en bra dag!</string>
</resources>
