<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_drawer_home" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/drawer_menu_schedule" />
        <item
            android:id="@+id/nav_shifts"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_drawer_payouts" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_menu_settings" />
    </group>

    <item android:title="@string/drawer_menu_submenu_title">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_arrow_back"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_link"
                android:icon="@drawable/ic_facebook"
                android:title="@string/drawer_menu_link_facebook" />
        </menu>
    </item>

</menu>
