<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pami.com.pami.LoginActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="32dp">


        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/logo_font"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="58sp"
             />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_transperant"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/inlogg"
                android:shadowRadius="5"
                android:shadowColor="@android:color/black"

                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/email_et"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@drawable/white_bg_round_corners"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/password_et"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:background="@drawable/white_bg_round_corners"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="28dp"
                style="@style/pamiBtn"
                android:background="@color/colorPrimary"
                android:text="@string/log_in"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="36dp"
                android:text="@string/login_forget_password"
                android:shadowRadius="5"
                android:shadowColor="@android:color/black"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible">

            <ImageView
                android:id="@+id/bg_splash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:visibility="visible"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/splash_screen_text"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="@font/logo_font"
                android:textSize="60sp" />

    </RelativeLayout>


</RelativeLayout>